v0.3.5 mobile layout bugfix (#21)

--- a/web/res/styles.css
+++ b/web/res/styles.css
@@ -122,13 +122,6 @@ main {
   z-index: 2;
 }
 
-.pane-stack .input-pane-textarea {
-  min-height: 0;
-  overflow: hidden;
-  resize: none;
-  transition: height 500ms ease;
-}
-
 .pane-stack .output-pane-text-content {
   transition: height 500ms ease;
 }
@@ -414,10 +407,17 @@ main {
   /* background: rgba(255, 255, 255, 0.6); */
 }
 
+/* .pane-stack .input-pane-textarea {
+  min-height: 0;
+  overflow: hidden;
+  resize: none;
+  transition: height 500ms ease;
+} */
+
 .input-pane-textarea {
   box-sizing: border-box;
   width: 100%;
-  min-height: 0;
+  min-height: 4.32rem;
   resize: none;
   border: 0;
   background: transparent;
@@ -716,5 +716,9 @@ main {
   .input-pane-spinner {
     right: 0.5rem;
     bottom: 0.5rem;
+  }
+
+  .input-pane-textarea {
+    min-height: 2.94rem;
   }
 }
